# naka-chan

./: Cargo.toml  Procfile  README.md  docker-compose.yml  serenity.md  songbird.md
.github/workflows/: deploy.yml  lint.yml  test.yml
docker/naka-chan/: Dockerfile
docker/naka-chan-develop/: Dockerfile
resources/: massages.toml  massages.txt  messages.toml
src/: commands.rs  handler.rs  main.rs  messages.rs  utils.rs
src/commands/: groups.rs  handler.rs  help.rs  logic.rs  mod.rs  nakachan.rs  ping.rs  utils.rs
src/commands/groups/: general.rs  play.rs
src/commands/logic/: help.rs  nakachan.rs  ping.rs
