[package]
name = "naka-chan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = {version = "0.10.7", features = ["framework", "standard_framework"]}
tokio = {version = "1.6.0", features = ["macros", "rt-multi-thread"]}
chrono = "0.4"
sys-info = "0.7"
