[package]
name = "naka-chan"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
chrono = "0.4.19"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
serenity = {version = "0.10.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"]}
sys-info = "0.9.0"
tokio = {version = "1.12.0", features = ["macros", "rt-multi-thread"]}
toml = "0.5.8"

[features]
